--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,9 @@ jobs:
           - x64
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}
+          submodules: true
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
