--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          token: ${{ secrets.ACCESS_TOKEN }}
           submodules: true
       - uses: julia-actions/setup-julia@v1
         with:
